[package]
name = "tcpcengine"
version = "0.4.0"
authors = ["Rainer Stademann <rainer@spacebandit.de>"]
edition = "2024"
rust-version = "1.91.1"

[lib]
name = "tcp_lib"
path = "src/lib.rs"

[[bin]]
name = "tcpengine"
path = "src/bin.rs"


[dependencies]
# we are using here e2de from branch e2d2-rs-v1 of https://github.com/rstade/NetBricks
e2d2 = { version = "=1.0.11", path = "../NetBricks/framework", features = ["performance"] }
fnv = "*"
log = ">=0.4"
env_logger = ">=0.5"
ctrlc = { version = ">=3.1", features = ["termination"] }
time = ">=0.1.0"
toml = ">=0.8"
separator =  ">= 0.3"
serde = ">=1.0"
serde_derive = ">=1.0"
eui48 = { git= "https://github.com/readysettech/eui48.git", version= ">=1.1", features=["serde"] , default-features= false}
uuid = { version = ">=0.7", features = ["v4", "serde"] }
bincode = "*"
serde_json = "*"
ipnet = ">=2.0"
rustyline = ">=10.1.1"
clap = ">=4.1"
rand = ">=0.8"

[features]
profiling =[]
